SigmaCodebackup3rdSep/objects/Manufacturing_Run_Resource_Activities__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Finish_Form__c</fullName>
        <formula>Actual_Finish__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Finish__c</fullName>
        <label>Actual Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Form__c</fullName>
        <formula>IF(Manufacture_Run_Type__c = &apos;milestone&apos; ,End_Date__c ,End_Date__c -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date for functionality</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR_Activity_Id__c</fullName>
        <label>MR Activity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Activity_Name__c</fullName>
        <label>MR Activity Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Activity_Owner__c</fullName>
        <label>MR Activity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacture_Run_Type__c</fullName>
        <label>Manufacture Run Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipName>MR_Resource_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mark_as_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark as Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Id__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Role 1</fullName>
                </value>
                <value>
                    <fullName>Role 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Link_Id__c</fullName>
        <label>Source Link Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Link_Id__c</fullName>
        <label>Target Link Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WBS_Code__c</fullName>
        <label>WBS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Duration__c</fullName>
        <label>Work Duration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Status__c</fullName>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lag__c</fullName>
        <label>lag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>linkId__c</fullName>
        <label>linkId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>predecessors__c</fullName>
        <label>predecessors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>target__c</fullName>
        <label>target</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Manufacturing Run Resource Capacity</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>MR_Resource_Activities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run Resource Capacity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>